# dotfiles

./: .gitignore  .luarc.json  CLAUDE.md  DOLT_REMOTE.md  README.md  bashrc  color2.sh  config.yaml  defaults.yaml  defaults.yaml.example  dtlf.sh  gitconfig  install-rotz.sh  install.conf.yaml  lirfaqlonvdm3vgoossii3kmksftpvdv  manifest  nohup.out  profile  tigrc  tmux.conf  typescript  zshrc
.beads/: .gitignore  config.yaml  interactions.jsonl  issues-snapshot.jsonl  issues.jsonl  metadata.json
.claude/: settings.local.json
akm-graph/: dot.yaml  go.mod  go.sum  graph.go  graph_test.go  main.go  open.go  open_test.go  parser.go  parser_test.go  server.go  server_test.go  watch.go  watch_test.go
archive/: README.md
azcli/: dot.yaml
bat/: bat.conf
beads/: dot.yaml
classicshell/: dot.yaml
claude/: claude-wrapper  dot.yaml  epic.nu  repos-health.nu  settings.json  statusline.sh
clicks/: 50-usb-host-mode.start  60-clicks.conf  90-clicks-keyboard.hwdb  clicks-keyboard.conf  clicks-reset  dot.yaml  keyd-clicks.conf
clip-store/: dot.yaml
clipcat/: clipcat.toml  dot.yaml  test-clipcat.sh
code/: keybindings.json  settings.json
copyq/: commands.ini  copyq.conf  dot.yaml  test-copyq.sh
d2/: dot.yaml
distro/: bash_profile  bashrc  dot.yaml
docker/: dot.yaml
docs/: .moxide.toml  archive.md  board.md  product.md
emacs/: dot.yaml
evolution/: accels  dot.yaml  filters.xml  vfolders.xml
fancywm/: dot.yaml  fancy-wm.ahk  settings.json
firefox/: dot.yaml  ff  ff.desktop  user.js
preview-webview/: Cargo.toml  dot.yaml
preview-webview/src/: main.rs
(+1963 files in other folders)
